@@ -10,8 +10,6 @@ constants = win32com.client.constants
 
 win32com.client.gencache.EnsureModule("{783CD4E0-9D54-11CF-B8EE-00608CC9A71F}", 0, 5, 0)
 
-error = "vssutil error"
-
 
 def GetSS():
     ss = win32com.client.Dispatch("SourceSafe")
@@ -172,8 +170,10 @@ def MakeNewBuildNo(project, buildDesc=None, auto=0, bRebrand=0):
             if not bRebrand:
                 buildNo += 1
             buildNo = str(buildNo)
-        except ValueError:
-            raise error("The previous label could not be incremented: %s" % (oldBuild))
+        except ValueError as error:
+            raise ValueError(
+                f"The previous label could not be incremented: {oldBuild}"
+            ) from error
 
     if not auto:
         from pywin.mfc import dialog
